--- a/proto/build.gradle
+++ b/proto/build.gradle
@@ -23,6 +23,14 @@ test {
     useJUnitPlatform()
 }
 
+sourceSets {
+    main {
+        java {
+            srcDirs = ['build/generated/source/proto/main/java', 'build/generated/source/proto/main/grpc']
+        }
+    }
+}
+
 protobuf {
     protoc {
         artifact = "com.google.protobuf:protoc:3.17.2"
